# taichi-aot-demo

./: .gitignore  .gitmodules  CMakeLists.txt
2_mpm88/: app.cpp
2_mpm88/assets/: mpm88.py
3_implicit_fem/: app.cpp
5_sph/: app.cpp
cmake/: demo.cmake  env.cmake
framework/: CMakeLists.txt
framework/android/: .gitignore
framework/android/app/src/main/: AndroidManifest.xml
framework/include/taichi/aot_demo/: common.hpp  graphics_task.hpp  renderer.hpp  shadow_buffer.hpp  shadow_texture.hpp
framework/include/taichi/aot_demo/draws/: draw_mesh.hpp  draw_particles.hpp  draw_points.hpp
framework/include/taichi/aot_demo/metal/: metal_graphics_task.hpp  metal_renderer.hpp
framework/include/taichi/aot_demo/vulkan/: vulkan_renderer.hpp
framework/src/taichi/aot_demo/: renderer.cpp  shadow_buffer.cpp  shadow_texture.cpp  spirv_cross.cpp
framework/src/taichi/aot_demo/draws/: draw_mesh.cpp  draw_particles.cpp  draw_texture.cpp
framework/src/taichi/aot_demo/entry_points/: android.cpp  glfw.cpp
framework/src/taichi/aot_demo/metal/: metal_graphics_task.mm  metal_renderer.mm  metal_shadow_buffer.cpp  metal_shadow_texture.cpp
framework/src/taichi/aot_demo/vulkan/: vulkan_renderer.cpp  vulkan_shadow_buffer.cpp
implicit_fem/android/app/src/main/assets/shaders/aot/implicit_fem/: clear_field_c76_0_k0020_vk_0_t00.spv  (+14 more)
implicit_fem/desktop/: CMakeLists.txt  implicit_fem.cpp
implicit_fem/include/: fem_app.h  mesh_data.h
implicit_fem/python/: implicit_fem.py
include/tiaot/: framework.hpp
scripts/: build-taichi-aarch64.sh
src/tiaot/demos/: implicit_fem.cpp
